--- a/_includes/Books.html
+++ b/_includes/Books.html
@@ -23,6 +23,9 @@
       <h5>
         <i class="fa fa-book"></i>&nbsp;&nbsp;<strong> <a target="_blank" href="https://www.amazon.com/gp/offer-listing/0262035618/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0262035618&linkCode=am2&tag=sociall1-20&linkId=3794340e4e6b3592a6401f2aac4755f1">Deep Learning (Adaptive Computation and Machine Learning series)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=sociall1-20&l=am2&o=1&a=0262035618" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
       </h5>
+      <h5>
+        <i class="fa fa-book"></i>&nbsp;&nbsp;<strong> <a target="_blank" href="https://www.amazon.com/gp/offer-listing/0691159173/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0691159173&linkCode=am2&tag=sociall1-20&linkId=781ffe5b36a858b4504a85786d542c90">A Mathematics Course for Political and Social Research</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=sociall1-20&l=am2&o=1&a=0691159173" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+      </h5>
     </div>
   </div>
   </div>
