--- a/_includes/Bar.html
+++ b/_includes/Bar.html
@@ -54,7 +54,7 @@ d3.tsv("characters.tsv", function(error, data){
 			.range([0,width]);
 
 	var y = d3.scale.ordinal()
-      .rangeBands([height,0],.1)
+      .rangeBands([height],.1)
 			.domain(data.map(function(d){ return d.speaker;}))
 			;
 
@@ -69,7 +69,7 @@ d3.tsv("characters.tsv", function(error, data){
 
 	svg.append("g")
     	.attr("class", "y axis")
-    	//.attr("transform", "translate(0," + height + ")")
+    	.attr("transform", "translate(0," + height + ")")
     	.call(yAxis)
     	.selectAll("text")
     	.style("font-size", "8px")
@@ -77,12 +77,6 @@ d3.tsv("characters.tsv", function(error, data){
       	//.attr("dy", ".8em")
       	.attr("dx", "-.55em")
       	//.attr("transform", "rotate(-90)" );
-
-
- 	svg.append("g")
-    	.attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-    	.call(xAxis);
 
 	svg.selectAll("rectangle")
 		.data(data.sort(function(a, b){return b-a}))
