--- a/_includes/Bar.html
+++ b/_includes/Bar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<head>
+
 <style>
 
 .rectangle {
@@ -10,20 +10,18 @@
 	fill: orange;
 }
 .axis {
-  font: 10px sans-serif;
+	font: 10px sans-serif;
 }
 
 .axis path,
 .axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
 }
 </style>
-</head>
-<body>
 <div id="drop" align=center></div>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script>
 
 var margin = {top: 10, right: 180, bottom: 10, left: 180},
@@ -69,7 +67,7 @@ d3.tsv("characters.tsv", function(error, data){
 
 	svg.append("g")
     	.attr("class", "y axis")
-    	.attr("transform", "translate(0," + height + ")")
+    	//.attr("transform", "translate(0," + height + ")")
     	.call(yAxis)
     	.selectAll("text")
     	.style("font-size", "8px")
@@ -77,6 +75,12 @@ d3.tsv("characters.tsv", function(error, data){
       	//.attr("dy", ".8em")
       	.attr("dx", "-.55em")
       	//.attr("transform", "rotate(-90)" );
+
+
+ 	svg.append("g")
+    	.attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+    	.call(xAxis);
 
 	svg.selectAll("rectangle")
 		.data(data.sort(function(a, b){return b-a}))
@@ -144,4 +148,3 @@ d3.tsv("characters.tsv", function(error, data){
 });
 
 </script>
-</body>
