--- a/_includes/scatter.html
+++ b/_includes/scatter.html
@@ -70,8 +70,8 @@
     .range([h,0])
   // SVG
   var svg = body.append('svg')
-      .attr('height',h + margin.top + margin.bottom)
-      .attr('width',w + margin.left + margin.right)
+      .attr('height',height + margin.top + margin.bottom)
+      .attr('width',width + margin.left + margin.right)
     .append('g')
       .attr('transform','translate(' + margin.left + ',' + margin.top + ')')
   // X-axis
