--- a/_includes/scatter.html
+++ b/_includes/scatter.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html>
+  <body>
     <meta charset='utf-8'>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel='stylesheet' href='styles.css'>
@@ -50,7 +52,7 @@
 
   // Variables
   var body = d3.select('body')
-  //var margin = { top: 50, right: 50, bottom: 50, left: 50 }
+  var margin = { top: 50, right: 50, bottom: 50, left: 50 }
   var h = 1000 - margin.top - margin.bottom
   var w = 1000 - margin.left - margin.right
   var formatPercent = d3.format('.2%')
@@ -183,3 +185,5 @@
   }
 });
     </script>
+  </body>
+</html>
