--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
         <li><a href="{{ site.baseurl }}Books.html">BOOK LIST</a></li>
+        <li><a href="{{ site.baseurl }}photo-gallary.html">TABLEAU</a></li>
         <li><a href="http://danlarson.io/assets/PDF/Resume.pdf">RESUME</a></li>
       </ul>
     </div>
